probably fixes slide arrows on mobile devices

--- a/scss/slideshow.scss
+++ b/scss/slideshow.scss
@@ -150,7 +150,7 @@ article {
   @extend %bind-prev-next-button;
   content: ">";
   padding-left: 5px;
-  font-family: Consolas, cursive;
+  font-family: Consolas, Monospaced, monospace;
   font-size: 35px;
 }
 
